--- a/package.json
+++ b/package.json
@@ -9,22 +9,23 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "dotenv": "^16.3.1",
-    "next": "13.5.4",
+    "dotenv": "^16.4.1",
+    "next": "14.1.0",
     "pg": "^8.11.3",
     "pg-hstore": "^2.3.4",
     "react": "^18",
     "react-dom": "^18",
-    "sequelize": "^6.33.0"
+    "react-icons": "^5.0.1",
+    "sequelize": "^6.35.2"
   },
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10",
-    "daisyui": "^3.9.2",
+    "daisyui": "^4.6.1",
     "eslint": "^8",
-    "eslint-config-next": "13.5.4",
+    "eslint-config-next": "14.1.0",
     "postcss": "^8",
     "tailwindcss": "^3",
     "typescript": "^5"
